--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="ru">
 <head>
-  <meta charset="utf-8" />
-  <title></title>
+  <title>Заголовок</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
