--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>Заголовок</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8">
+<title>Документ</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-  <p>sdf</p>
+ <p class="world">Привет, Мир!</p>
 </body>
 </html>
+Footer
